add the knowledge of Unix OS

--- a/compiler-principle/compiler-principle/1.6-Programming-Language-Basics.md
+++ b/compiler-principle/compiler-principle/1.6-Programming-Language-Basics.md
@@ -30,9 +30,9 @@ makes `x` a **class variable** and says that there is only one copy of x, no mat
 ## 1.6.2 Environments and States
 
 Another important distinction we must make when discussing programming languages is whether changes occurring as the program runs affect the **values** of data elements or affect the interpretation of names for that data. For example,the execution of an assignment such as `x = y + 1` changes the **value** denoted by
-the name `x`. More specifically, the assignment changes the **value** in whatever location is denoted by x.
+the **name** `x`. More specifically, the assignment changes the **value** in whatever **location** is denoted by x.
 
-It may be less clear that the **location** denoted by `x` can change at run time.For instance, as we discussed in Example 1.3, if `x` is not a **static** (or "**class**") variable, then every object of the class has its own location for an instance of variable x. In that case, the assignment to x can change any of those "instance" variables, depending on the **object** to which a method containing that assignment is applied.
+It may be less clear that the **location** denoted by `x` can change at **run time**.For instance, as we discussed in Example 1.3, if `x` is not a **static** (or "**class**") variable, then every object of the class has its own location for an instance of variable x. In that case, the assignment to x can change any of those "instance" variables, depending on the **object** to which a method containing that assignment is applied.
 
 ![](./Figure-1.8-Two-stage-mapping-from-names-to-values.png)
 
@@ -86,10 +86,14 @@ The **environment** and **state** mappings in Fig. 1.8 are dynamic, but there ar
 
 ## 1.6.3 Static Scope and Block Structure
 
-Most languages, including C and its family, use [static scope](#1.6.1 The Static/Dynamic Distinction)_. The **scope rules** for C are based on program structure; the scope of a declaration is determined implicitly(隐式地) by where the declaration appears in the program. Later languages,such as C++, Java, and C#, also provide explicit control over scopes through
+Most languages, including C and its family, use [static scope](#1.6.1 The Static/Dynamic Distinction)_. The **scope rules** for C are based on **program structure**; the scope of a declaration is determined implicitly(隐式地) by where the declaration appears in the program. Later languages,such as C++, Java, and C#, also provide explicit control over scopes through
 the use of keywords like `public`, `private`, and `protected`.
 
 In this section we consider static-scope rules for a language with **blocks**, where a block is a grouping of **declarations** and **statements**. C uses braces `{` and `}` to delimit(定界) a block; the alternative use of `begin` and `end` for the same purpose dates back to Algol.
+
+***SUMMARY*** : 在`c++`中，block除了可以用于确定scope外，block也可以决定*storage duration* 。以下是摘自cppreference 的 [Storage class specifiers](https://en.cppreference.com/w/cpp/language/storage_duration)章节：
+
+> ***automatic*** storage duration. The storage for the object is allocated at the beginning of the enclosing code block and deallocated at the end. All local objects have this storage duration, except those declared `static`, `extern` or `thread_local`.
 
 ---
 
